ajout balise google search console

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
+	<meta name="google-site-verification" content="gaBmN11k6xVIWXZpaF4Paf-jCnE6GkukNFIT3qUORAU" />
+
     <title>Agence La Panthère</title>
 
     
